--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>scroll down to explore more about us</p>
         </div>
         <div id="f2" ><!--f2 is for basic styling of images -->
-            <img src="/images/person/person-2.png" alt="yello tshirt & black cap" width="400px" height="400px">
+            <img src="images/person/person-2.png" alt="yello tshirt & black cap" width="400px" height="400px">
         </div>
     </section> 
 
@@ -33,14 +33,14 @@
 
         <section id="second" class="sec flexcontainer">
             <div id="f1" class="mission"><!--the class mission/ vission/ goal is used to further styling of individuals-->
-                <img src="/images/illustrators/illustrator-1.png" height="100" width="100" alt=" animated with joystick">
+                <img src="images/illustrators/illustrator-1.png" height="100" width="100" alt=" animated with joystick">
                 <h1>Mission</h1>
                 <p>To provide high quality, professional and complete creative services in all design & communication fields 
                 </p>
 
             </div>
             <div id="f1" class="vission">
-                <img src="/images/illustrators/illustrator-2.png"  height="100" width="100" alt="animeted man with laptop">
+                <img src="images/illustrators/illustrator-2.png"  height="100" width="100" alt="animeted man with laptop">
                 <h1>vission</h1>
                 <p>Choose something basic for your first site design. This seems like a no brainer, right? But …
                     Find inspiration from other designers. You've no doubt come across websites that have …
@@ -48,7 +48,7 @@
                     research of design.</p>
             </div>
             <div id="f1"class="goal">
-                <img src="/images/illustrators/illustrator-3.png"  height="100" width="100" alt="man reading book under the tree">
+                <img src="images/illustrators/illustrator-3.png"  height="100" width="100" alt="man reading book under the tree">
                 <h1>
                     Goal
                 </h1>
