updated all image sources to avoid http 404 error

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <section id="third" class="flexcontainer">
         <div class="bgimg"><!--bgimg used to add the background image-->
-            <img id="moveleft" src="/images/pictures/coding.png" alt="two girls are watching a screen"  height="400" width="400">
+            <img id="moveleft" src="images/pictures/coding.png" alt="two girls are watching a screen"  height="400" width="400">
         </div>
         <div id="f1" class="dev">
             <h1>
@@ -84,7 +84,7 @@
             <a id="button" href="https://www.programming-hero.com/"target="blank">Read the Documentation</a>
         </div>
         <div id="f1" class="bgimg2"> <!--bgimg2 same as bgimg-->
-            <img id=moveleft src="/images/pictures/project.png" alt="peoples are dicussing a topic" height="400" width="400">
+            <img id=moveleft src="images/pictures/project.png" alt="peoples are dicussing a topic" height="400" width="400">
         </div>
     </section>
 
@@ -92,7 +92,7 @@
         <h1 id="missionblue" ><a href="https://www.programming-hero.com/">Join</a> <span id="colmiss22">to learn more about web Development</span> </h1>
         <section id="fifth" class="flexcontainer">
             <div id="f2">
-                <img src="/images/pictures/banner-phone.png" width="400" height="400" alt="">
+                <img src="images/pictures/banner-phone.png" width="400" height="400" alt="">
             </div>
             <div id="f1" class="submit">
                 <form>
